Removed the borders arounder Lili's images, as requested, and also added spacing. Fixed the list in the process model section. Moved another anchor tag.

--- a/style.css
+++ b/style.css
@@ -36,3 +36,5 @@ img {
 }
 
 #content { max-width: 700px; text-align: justify; }
+
+.noborders { border: none; }
